# Terminal-AI-Agent

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  README.md  output.txt  setup.sh
.github/workflows/: build.yml
src/: lib.rs  lib.rs.functions.txt  main.rs  tools.rs
