[package]
name = "terminal_ai_agent"
version = "0.1.0"
edition = "2021"
description = "A fast terminal AI agent that queries free models from OpenRouter and Groq in parallel"
authors = ["yesk993-ops"]
license = "MIT"
repository = "https://github.com/yesk993-ops/Terminal-AI-Agent"
homepage = "https://github.com/yesk993-ops/Terminal-AI-Agent"
keywords = ["ai", "terminal", "cli", "openrouter", "groq"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
regex = "1"
textwrap = { version = "0.16", features = ["terminal_size"] }